--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1"
+    "react-globe.gl": "^2.32.0",
+    "react-leaflet": "^4.2.1",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.16",
