Integrar Firebase para puntuaciones y mejoras en la experiencia de juego
- Añadir configuración de Firebase para almacenamiento de puntuaciones
- Implementar componente Highscores con tabla de clasificación
- Crear funcionalidad para guardar y mostrar puntuaciones de usuarios
- Añadir modal de puntuaciones con soporte para diferentes tipos de juego
- Actualizar estilos CSS para el nuevo componente de puntuaciones
- Modificar lógica de puntuación para calcular puntajes basados en intentos y distancia

--- a/.env
+++ b/.env
@@ -4,4 +4,12 @@ REACT_APP_FIREBASE_PROJECT_ID=m-polo
 REACT_APP_FIREBASE_STORAGE_BUCKET=m-polo.firebasestorage.app
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=524467689467
 REACT_APP_FIREBASE_APP_ID=1:524467689467:web:5b04e40ae81864fb69dd5e
-REACT_APP_FIREBASE_MEASUREMENT_ID=G-JZ4HVCE02G 
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-JZ4HVCE02G
+
+VITE_FIREBASE_API_KEY=AIzaSyBZjrx7ceoEKy3JYVRkPpCbgs7Ydu3fSxE
+VITE_FIREBASE_AUTH_DOMAIN=m-polo.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=m-polo
+VITE_FIREBASE_STORAGE_BUCKET=m-polo.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=524467689467
+VITE_FIREBASE_APP_ID=1:524467689467:web:5b04e40ae81864fb69dd5e
+VITE_FIREBASE_MEASUREMENT_ID=G-JZ4HVCE02G 
