--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "marcopolo",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
+    "migrate": "node scripts/migrate-to-mongo.js",
+    "start": "npm run dev",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -11,14 +12,17 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
     "csv-parser": "^3.2.0",
+    "dotenv": "^16.5.0",
     "firebase": "^11.3.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-globe.gl": "^2.32.0",
     "react-leaflet": "^4.2.1",
-    "three": "^0.173.0"
+    "three": "^0.173.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.16",
