--- a/package.json
+++ b/package.json
@@ -12,17 +12,13 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
-    "@types/dotenv": "^6.1.1",
     "csv-parser": "^3.2.0",
-    "dotenv": "^16.5.0",
-    "firebase": "^11.3.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-globe.gl": "^2.32.0",
     "react-leaflet": "^4.2.1",
-    "three": "^0.173.0",
-    "ts-node": "^10.9.2"
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.16",
@@ -35,6 +31,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "firebase-tools": "^11.3.1",
     "sharp": "^0.33.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
