--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "csv-parser": "^3.2.0",
+    "dotenv": "^16.5.0",
+    "firebase": "^11.8.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-globe.gl": "^2.32.0",
     "react-leaflet": "^4.2.1",
+    "react-router-dom": "^7.6.1",
     "three": "^0.173.0"
   },
   "devDependencies": {
